--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,15 +11,16 @@ http = "0.2"
 oauth2 = "4.1"
 # Use Rustls because it makes it easier to cross-compile on CI
 reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
-serde = { version = "1.0", features = ["derive"] }
+serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-tokio = { version = "1.0", features = ["full"] }
-redis = { version = "0.23.0", features = ["tokio-comp"] }
+tokio = { version = "1", features = ["full"] }
+redis = { version = "0.24", features = ["tokio-comp"] }
 rand = "0.8.5"
-jsonwebtoken = "8.3"
-once_cell = "1.18"
+jsonwebtoken = { version = "9", features = ["use_pem"] }
 tower-http = { version = "0.4.0", features = ["cors"] }
 tower-cookies = "0.9"
-cached = "0.44"
-sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls", "uuid"] }
+sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid"] }
 dotenv = "0.15"
+openssl = "0.10"
+askama = { version = "0.12", features = ["with-axum"] }
+askama_axum = "0.3"
